<resources>
    <string name="app_name">AdaTaylor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AdaTaylor</string>
    <string name="nav_header_subtitle">自适应Taylor展开计算工具</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">计算器</string>
    <string name="menu_gallery">可视化</string>
    <string name="menu_slideshow">示例</string>
    <string name="menu_wavelet">小波分析</string>
    <string name="menu_hybrid">小波-泰勒混合逼近</string>
    <string name="menu_pade">泰勒-帕德比较</string>
    <string name="remainer_analysis">余项分析</string>
</resources>