<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_calculate"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_chart"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_wavelet"
            android:icon="@drawable/ic_menu_wavelet"
            android:title="@string/menu_wavelet" />
        <item
            android:id="@+id/nav_hybrid"
            android:icon="@drawable/ic_menu_hybrid"
            android:title="@string/menu_hybrid" />
        <item
            android:id="@+id/nav_pade"
            android:icon="@drawable/ic_menu_pade"
            android:title="@string/menu_pade" />
        <item
            android:id="@+id/nav_remainder"
            android:icon="@drawable/ic_remainder"
            android:title="@string/remainer_analysis" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>